--- a/InterfaceAndVirtualMethods/InterfaceAndVirtualMethods.csproj
+++ b/InterfaceAndVirtualMethods/InterfaceAndVirtualMethods.csproj
@@ -44,6 +44,9 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Shape.cs" />
+    <Compile Include="Square.cs" />
+    <Compile Include="Validator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
